--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Build and Publish to GitHub Packages
+name: Build and Publish to PyPI
 
 on:
   push:
@@ -27,10 +27,9 @@ jobs:
       - name: Build package
         run: python setup.py sdist bdist_wheel
 
-      - name: Publish to GitHub Packages
+      - name: Publish to PyPI
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+          TWINE_PASSWORD: ${{ secrets.PYPI }}
         run: |
-          python -m twine upload --verbose \
-            --repository-url https://upload.pypi.github.com/orgs/Grupo-MACC/packages/pypi/upload dist/*
+          python -m twine upload --verbose dist/*
